--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,6 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,git,python,dotenv
+
+
+sentiment.txt
